--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -5,10 +5,10 @@ x86_docker_builder:
   smoketest_sail_script: docker run --rm ghcr.io/cheriot-platform/devcontainer:x86_64-latest /bin/sh -c "cd /tmp/ && git clone --recurse http://github.com/Microsoft/cheriot-rtos && cd cheriot-rtos/tests && xmake f --sdk=/cheriot-tools && xmake && xmake run"
   smoketest_ibex_script: docker run --rm ghcr.io/cheriot-platform/devcontainer:x86_64-latest /bin/sh -c "cd /tmp/ && git clone --recurse http://github.com/Microsoft/cheriot-rtos && cd cheriot-rtos/tests && xmake f --sdk=/cheriot-tools --board=ibex-safe-simulator && xmake && xmake run"
   login_task:
-    only_if: $CIRRUS_BRANCH == 'main'
+    #only_if: $CIRRUS_BRANCH == 'main'
     script: echo $GITHUB_TOKEN | docker login ghcr.io -u davidchisnall --password-stdin
   push_task:
-    only_if: $CIRRUS_BRANCH == 'main'
+    #only_if: $CIRRUS_BRANCH == 'main'
     script: docker push ghcr.io/cheriot-platform/devcontainer:x86_64-latest
 
 arm_docker_builder:
@@ -19,10 +19,10 @@ arm_docker_builder:
   smoketest_sail_script: docker run --rm ghcr.io/cheriot-platform/devcontainer:aarch64-latest /bin/sh -c "cd /tmp/ && git clone --recurse http://github.com/Microsoft/cheriot-rtos && cd cheriot-rtos/tests && xmake f --sdk=/cheriot-tools && xmake && xmake run"
   smoketest_ibex_script: docker run --rm ghcr.io/cheriot-platform/devcontainer:aarch64-latest /bin/sh -c "cd /tmp/ && git clone --recurse http://github.com/Microsoft/cheriot-rtos && cd cheriot-rtos/tests && xmake f --sdk=/cheriot-tools --board=ibex-safe-simulator && xmake && xmake run"
   login_task:
-    only_if: $CIRRUS_BRANCH == 'main'
+    #only_if: $CIRRUS_BRANCH == 'main'
     script: echo $GITHUB_TOKEN | docker login ghcr.io -u davidchisnall --password-stdin
   push_task:
-    only_if: $CIRRUS_BRANCH == 'main'
+    #only_if: $CIRRUS_BRANCH == 'main'
     script: docker push ghcr.io/cheriot-platform/devcontainer:aarch64-latest
 
 final_docker_builder:
