--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -4,11 +4,13 @@ x86_docker_builder:
   build_script: docker build -t ghcr.io/cheriot-platform/devcontainer:x86_64-latest .
   smoketest_sail_script: docker run --rm ghcr.io/cheriot-platform/devcontainer:x86_64-latest /bin/sh -c "cd /tmp/ && git clone --recurse http://github.com/Microsoft/cheriot-rtos && cd cheriot-rtos/tests && xmake f --sdk=/cheriot-tools && xmake && xmake run"
   smoketest_ibex_script: docker run --rm ghcr.io/cheriot-platform/devcontainer:x86_64-latest /bin/sh -c "cd /tmp/ && git clone --recurse http://github.com/Microsoft/cheriot-rtos && cd cheriot-rtos/tests && xmake f --sdk=/cheriot-tools --board=ibex-safe-simulator && xmake && xmake run"
-  login_task:
-    #only_if: $CIRRUS_BRANCH == 'main'
+  task:
+    name: login
+    only_if: $CIRRUS_BRANCH == 'main'
     script: echo $GITHUB_TOKEN | docker login ghcr.io -u davidchisnall --password-stdin
-  push_task:
-    #only_if: $CIRRUS_BRANCH == 'main'
+  task:
+    name: push
+    only_if: $CIRRUS_BRANCH == 'main'
     script: docker push ghcr.io/cheriot-platform/devcontainer:x86_64-latest
 
 arm_docker_builder:
@@ -18,11 +20,13 @@ arm_docker_builder:
   build_script: docker build -t ghcr.io/cheriot-platform/devcontainer:aarch64-latest .
   smoketest_sail_script: docker run --rm ghcr.io/cheriot-platform/devcontainer:aarch64-latest /bin/sh -c "cd /tmp/ && git clone --recurse http://github.com/Microsoft/cheriot-rtos && cd cheriot-rtos/tests && xmake f --sdk=/cheriot-tools && xmake && xmake run"
   smoketest_ibex_script: docker run --rm ghcr.io/cheriot-platform/devcontainer:aarch64-latest /bin/sh -c "cd /tmp/ && git clone --recurse http://github.com/Microsoft/cheriot-rtos && cd cheriot-rtos/tests && xmake f --sdk=/cheriot-tools --board=ibex-safe-simulator && xmake && xmake run"
-  login_task:
-    #only_if: $CIRRUS_BRANCH == 'main'
+  task:
+    name: login
+    only_if: $CIRRUS_BRANCH == 'main'
     script: echo $GITHUB_TOKEN | docker login ghcr.io -u davidchisnall --password-stdin
-  push_task:
-    #only_if: $CIRRUS_BRANCH == 'main'
+  task:
+    name: push
+    only_if: $CIRRUS_BRANCH == 'main'
     script: docker push ghcr.io/cheriot-platform/devcontainer:aarch64-latest
 
 final_docker_builder:
