--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -4,14 +4,8 @@ x86_docker_builder:
   build_script: docker build -t ghcr.io/cheriot-platform/devcontainer:x86_64-latest .
   smoketest_sail_script: docker run --rm ghcr.io/cheriot-platform/devcontainer:x86_64-latest /bin/sh -c "cd /tmp/ && git clone --recurse http://github.com/Microsoft/cheriot-rtos && cd cheriot-rtos/tests && xmake f --sdk=/cheriot-tools && xmake && xmake run"
   smoketest_ibex_script: docker run --rm ghcr.io/cheriot-platform/devcontainer:x86_64-latest /bin/sh -c "cd /tmp/ && git clone --recurse http://github.com/Microsoft/cheriot-rtos && cd cheriot-rtos/tests && xmake f --sdk=/cheriot-tools --board=ibex-safe-simulator && xmake && xmake run"
-  task:
-    name: login
-    skip: $CIRRUS_BRANCH != 'main'
-    script: echo $GITHUB_TOKEN | docker login ghcr.io -u davidchisnall --password-stdin
-  task:
-    name: push
-    skip: $CIRRUS_BRANCH != 'main'
-    script: docker push ghcr.io/cheriot-platform/devcontainer:x86_64-latest
+  login_script: if [  "$CIRRUS_BRANCH" == 'main' ] ; then echo $GITHUB_TOKEN | docker login ghcr.io -u davidchisnall --password-stdin ; fi
+  push_script: if [  "$CIRRUS_BRANCH" == 'main' ] ; then docker push ghcr.io/cheriot-platform/devcontainer:x86_64-latest ; fi
 
 arm_docker_builder:
   env:
@@ -20,14 +14,9 @@ arm_docker_builder:
   build_script: docker build -t ghcr.io/cheriot-platform/devcontainer:aarch64-latest .
   smoketest_sail_script: docker run --rm ghcr.io/cheriot-platform/devcontainer:aarch64-latest /bin/sh -c "cd /tmp/ && git clone --recurse http://github.com/Microsoft/cheriot-rtos && cd cheriot-rtos/tests && xmake f --sdk=/cheriot-tools && xmake && xmake run"
   smoketest_ibex_script: docker run --rm ghcr.io/cheriot-platform/devcontainer:aarch64-latest /bin/sh -c "cd /tmp/ && git clone --recurse http://github.com/Microsoft/cheriot-rtos && cd cheriot-rtos/tests && xmake f --sdk=/cheriot-tools --board=ibex-safe-simulator && xmake && xmake run"
-  task:
-    name: login
-    skip: $CIRRUS_BRANCH != 'main'
-    script: echo $GITHUB_TOKEN | docker login ghcr.io -u davidchisnall --password-stdin
-  task:
-    name: push
-    skip: $CIRRUS_BRANCH != 'main'
-    script: docker push ghcr.io/cheriot-platform/devcontainer:aarch64-latest
+    only_if: $CIRRUS_BRANCH == 'main'
+  login_script: if [  "$CIRRUS_BRANCH" == 'main' ] ; then echo $GITHUB_TOKEN | docker login ghcr.io -u davidchisnall --password-stdin ; fi
+  push_script: if [  "$CIRRUS_BRANCH" == 'main' ] ; then docker push ghcr.io/cheriot-platform/devcontainer:aarch64-latest ; fi
 
 final_docker_builder:
   only_if: $CIRRUS_BRANCH == "main"
