Fix YAML syntax.

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -4,8 +4,10 @@ x86_docker_builder:
   build_script: docker build -t ghcr.io/cheriot-platform/devcontainer:x86_64-latest .
   smoketest_sail_script: docker run --rm ghcr.io/cheriot-platform/devcontainer:x86_64-latest /bin/sh -c "cd /tmp/ && git clone --recurse http://github.com/Microsoft/cheriot-rtos && cd cheriot-rtos/tests && xmake f --sdk=/cheriot-tools && xmake && xmake run"
   smoketest_ibex_script: docker run --rm ghcr.io/cheriot-platform/devcontainer:x86_64-latest /bin/sh -c "cd /tmp/ && git clone --recurse http://github.com/Microsoft/cheriot-rtos && cd cheriot-rtos/tests && xmake f --sdk=/cheriot-tools --board=ibex-safe-simulator && xmake && xmake run"
-  login_script: if [  "$CIRRUS_BRANCH" == 'main' ] ; then echo $GITHUB_TOKEN | docker login ghcr.io -u davidchisnall --password-stdin ; fi
-  push_script: if [  "$CIRRUS_BRANCH" == 'main' ] ; then docker push ghcr.io/cheriot-platform/devcontainer:x86_64-latest ; fi
+  login_script: |
+    if [  "$CIRRUS_BRANCH" == 'main' ] ; then echo $GITHUB_TOKEN | docker login ghcr.io -u davidchisnall --password-stdin ; fi
+  push_script: |
+    if [  "$CIRRUS_BRANCH" == 'main' ] ; then docker push ghcr.io/cheriot-platform/devcontainer:x86_64-latest ; fi
 
 arm_docker_builder:
   env:
@@ -15,8 +17,10 @@ arm_docker_builder:
   smoketest_sail_script: docker run --rm ghcr.io/cheriot-platform/devcontainer:aarch64-latest /bin/sh -c "cd /tmp/ && git clone --recurse http://github.com/Microsoft/cheriot-rtos && cd cheriot-rtos/tests && xmake f --sdk=/cheriot-tools && xmake && xmake run"
   smoketest_ibex_script: docker run --rm ghcr.io/cheriot-platform/devcontainer:aarch64-latest /bin/sh -c "cd /tmp/ && git clone --recurse http://github.com/Microsoft/cheriot-rtos && cd cheriot-rtos/tests && xmake f --sdk=/cheriot-tools --board=ibex-safe-simulator && xmake && xmake run"
     only_if: $CIRRUS_BRANCH == 'main'
-  login_script: if [  "$CIRRUS_BRANCH" == 'main' ] ; then echo $GITHUB_TOKEN | docker login ghcr.io -u davidchisnall --password-stdin ; fi
-  push_script: if [  "$CIRRUS_BRANCH" == 'main' ] ; then docker push ghcr.io/cheriot-platform/devcontainer:aarch64-latest ; fi
+  login_script: |
+    if [  "$CIRRUS_BRANCH" == 'main' ] ; then echo $GITHUB_TOKEN | docker login ghcr.io -u davidchisnall --password-stdin ; fi
+  push_script: |
+    if [  "$CIRRUS_BRANCH" == 'main' ] ; then docker push ghcr.io/cheriot-platform/devcontainer:aarch64-latest ; fi
 
 final_docker_builder:
   only_if: $CIRRUS_BRANCH == "main"
